# passr-firmware

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  SPI EPaper.sal  buildflash.sh  prj.conf  spi.txt  zephyr.hex  zephyr.uf2
boards/: nrf52840dk_nrf52840.overlay  rpi_pico.overlay
feather_bootloader/: manifest.json
pico_hal/waveshare/: Version_EN.txt
pico_hal/waveshare/c/: main.c
pico_hal/waveshare/c/examples/: EPD_2in66_test.c  EPD_2in66b_test.c  EPD_Test.h
src/: main.c
